--- a/css/style.scss
+++ b/css/style.scss
@@ -1,99 +1,43 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-.container {
-  width: 90%;
-  margin: auto;
-}
-.d-flex {
-  display: flex;
-flex-wrap: wrap;
-}
-.j-between {
-  justify-content: space-between;
-}
-
-.j-center {
-  justify-content: center;
-}
-.img-fluid {
-  width: 100%;
-}
-
-.list-unstyled {
-  list-style: none;
-}
-.decoration-none {
-  text-decoration: none;
-}
-.align-center {
-  align-items: center;
-}
-a {
-  text-decoration: none;
-}
-.features{
-  padding: 5rem 0;
-  .features-items{
-    .featured-item{
-      width:100%;
-      padding: 0 15px;
-      &:hover{
-        .img-text{
-          span{
-            opacity: 0;
-            transform: translateX(15px);
-          }
-          .btn-add{
-            opacity: 1;
-            right: 0;
-          }
-        }
-      }
-      .img-text{
-        position: relative;
-        span{
-          transition: .4s;
-        }
-        .btn-add{
-          position: absolute;
-          right: 15px;
-          top: 8px;
-          opacity: 0;
-          transition: .4s;
+.most-popular{
+  .popular-item{
+    &:hover{
+      .popular-img{
+        img{
+          transform: scale(1.1);
         }
       }
     }
-  }
-}
-@media (min-width:576px){
-  .features{
-    .features-items{
-      .featured-item{
-     width: 50%;
+    .popular-img{
+      position: relative;
+      overflow: hidden;
+      img{
+        transition: .4s ease-in-out;
+      }
+      span{
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        background: seagreen;
+        padding: 3px 8px;
+        color: #fff;
       }
     }
-  }
-}
-@media (min-width:768px){
-  .features{
-    .features-items{
-      .featured-item{
-     width: 33.333%;
+    .popular-head{
+      background: #eee;
+      padding-left: 15px;
+      span{
+        background: goldenrod;
+        color: #fff;
+        padding: 15px;
+        font-size: 20px;
+        font-weight: 600;
       }
     }
-  }
-}
-@media (min-width:1200px){
-  .features{
-    .features-items{
-      .featured-item{
-     width: 25%;
-      }
+    p{
+      margin: 15px 0;
+    }
+    .rating{
+      color: gold;
     }
   }
 }
